tests/type_checker/pass/fun-to-fun-1.core
module 'fun-to-fun-1' ['bar'/3,
		       'foo'/1,
		       'module_info'/0,
		       'module_info'/1]
    attributes [%% Line 1
		'file' =
		    %% Line 1
		    [{[116|[101|[115|[116|[115|[47|[116|[121|[112|[101|[95|[99|[104|[101|[99|[107|[101|[114|[47|[112|[97|[115|[115|[47|[102|[117|[110|[45|[116|[111|[45|[102|[117|[110|[45|[49|[46|[101|[114|[108]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]],1}],
		%% Line 9
		'type' =
		    %% Line 9
		    [{'new',{'type',{9,16},'tuple',[]},[]}],
		%% Line 10
		'type' =
		    %% Line 10
		    [{'consume',{'type',{10,20},'tuple',[]},[]}],
		%% Line 14
		'session' =
		    %% Line 14
		    [39|[102|[111|[111|[39|[40|[110|[101|[119|[40|[33|[105|[110|[116|[101|[103|[101|[114|[46|[32|[63|[105|[110|[116|[101|[103|[101|[114|[46|[32|[33|[105|[110|[116|[101|[103|[101|[114|[46|[32|[63|[115|[116|[114|[105|[110|[103|[46|[32|[32|[101|[110|[100|[41|[41|[32|[32|[32]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]],
		%% Line 16
		'session' =
		    %% Line 16
		    [39|[98|[97|[114|[39|[40|[110|[101|[119|[40|[33|[105|[110|[116|[101|[103|[101|[114|[46|[32|[63|[105|[110|[116|[101|[103|[101|[114|[46|[32|[33|[105|[110|[116|[101|[103|[101|[114|[46|[32|[63|[115|[116|[114|[105|[110|[103|[46|[32|[32|[101|[110|[100|[41|[44|[99|[111|[110|[115|[117|[109|[101|[40|[33|[105|[110|[116|[101|[103|[101|[114|[46|[32|[63|[115|[116|[114|[105|[110|[103|[46|[32|[45|[41|[44|[95|[41|[32]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]],
		%% Line 20
		'spec' =
		    %% Line 20
		    [{{'foo',1},[{'type',{20,10},'fun',[{'type',{20,10},'product',[{'user_type',{20,11},'new',[]}]}|[{'type',{20,21},'string',[]}]]}]}],
		%% Line 29
		'spec' =
		    %% Line 29
		    [{{'bar',3},[{'type',{29,10},'fun',[{'type',{29,10},'product',[{'user_type',{29,11},'new',[]}|[{'user_type',{29,17},'consume',[]}|[{'type',{29,27},'integer',[]}]]]}|[{'type',{29,41},'string',[]}]]}]}]]
'foo'/1 =
    %% Line 21
    ( fun (_0) ->
	  let <SessionID> =
	      call %% Line 22
		   'gen_server_plus':%% Line 22
				     'new'
		  (( _0
		     -| [{'function',{'foo',1}}] ))
	  in  let <Res> =
		  call %% Line 23
		       'gen_server_plus':%% Line 23
					 'call'
		      (( _0
			 -| [{'function',{'foo',1}}] ), %% Line 23
							SessionID, %% Line 23
								   45)
	      in  let <Res2> =
		      apply %% Line 25
			    'bar'/3
			  (( _0
			     -| [{'function',{'foo',1}}] ), %% Line 25
							    SessionID, %% Line 25
								       Res)
		  in  do  %% Line 26
			  call 'gen_server_plus':'close'
			      (( _0
				 -| [{'function',{'foo',1}}] ), SessionID)
			  %% Line 27
			  Res2
      -| [{'function',{'foo',1}}] )
'bar'/3 =
    %% Line 30
    ( fun (_0,_1,_2) ->
	  %% Line 31
	  call 'gen_server_plus':'call'
	      (_0, _1, _2)
      -| [{'function',{'bar',3}}] )
'module_info'/0 =
    ( fun () ->
	  call 'erlang':'get_module_info'
	      ('fun-to-fun-1')
      -| [{'function',{'module_info',0}}] )
'module_info'/1 =
    ( fun (_0) ->
	  call 'erlang':'get_module_info'
	      ('fun-to-fun-1', ( _0
				 -| [{'function',{'module_info',1}}] ))
      -| [{'function',{'module_info',1}}] )
end