tests/type_checker/fail/fun-app-spec-mismatch.core
module 'fun-app-spec-mismatch' ['bar'/3,
				'foo'/1,
				'module_info'/0,
				'module_info'/1]
    attributes [%% Line 1
		'file' =
		    %% Line 1
		    [{[116|[101|[115|[116|[115|[47|[116|[121|[112|[101|[95|[99|[104|[101|[99|[107|[101|[114|[47|[102|[97|[105|[108|[47|[102|[117|[110|[45|[97|[112|[112|[45|[115|[112|[101|[99|[45|[109|[105|[115|[109|[97|[116|[99|[104|[46|[101|[114|[108]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]],1}],
		%% Line 9
		'type' =
		    %% Line 9
		    [{'new',{'type',{9,16},'tuple',[]},[]}],
		%% Line 10
		'type' =
		    %% Line 10
		    [{'consume',{'type',{10,20},'tuple',[]},[]}],
		%% Line 14
		'session' =
		    %% Line 14
		    [39|[102|[111|[111|[39|[40|[110|[101|[119|[40|[33|[105|[110|[116|[101|[103|[101|[114|[46|[32|[63|[115|[116|[114|[105|[110|[103|[46|[32|[33|[115|[116|[114|[105|[110|[103|[46|[32|[63|[105|[110|[116|[101|[103|[101|[114|[46|[32|[32|[101|[110|[100|[46|[41|[41|[32|[45|[62|[32|[32|[32]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]],
		%% Line 15
		'session' =
		    %% Line 15
		    [39|[98|[97|[114|[39|[40|[95|[44|[99|[111|[110|[115|[117|[109|[101|[40|[33|[115|[116|[114|[105|[110|[103|[46|[32|[63|[105|[110|[116|[101|[103|[101|[114|[46|[32|[41|[44|[95|[41]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]],
		%% Line 17
		'spec' =
		    %% Line 17
		    [{{'foo',1},[{'type',{17,10},'fun',[{'type',{17,10},'product',[{'user_type',{17,11},'new',[]}]}|[{'type',{17,21},'integer',[]}]]}]}],
		%% Line 24
		'spec' =
		    %% Line 24
		    [{{'bar',3},[{'type',{24,10},'fun',[{'type',{24,10},'product',[{'type',{24,11},'pid',[]}|[{'user_type',{24,17},'consume',[]}|[{'type',{24,27},'string',[]}]]]}|[{'type',{24,40},'integer',[]}]]}]}]]
'foo'/1 =
    %% Line 18
    ( fun (_0) ->
	  let <SessionID> =
	      call %% Line 19
		   'gen_server_plus':%% Line 19
				     'new'
		  (( _0
		     -| [{'function',{'foo',1}}] ))
	  in  let <Res> =
		  call %% Line 20
		       'gen_server_plus':%% Line 20
					 'call'
		      (( _0
			 -| [{'function',{'foo',1}}] ), %% Line 20
							SessionID, %% Line 20
								   45)
	      in  %% Line 22
		  apply 'bar'/3
		      (( _0
			 -| [{'function',{'foo',1}}] ), SessionID, Res)
      -| [{'function',{'foo',1}}] )
'bar'/3 =
    %% Line 25
    ( fun (_0,_1,_2) ->
	  %% Line 26
	  call 'gen_server_plus':'call'
	      (_0, _1, _2)
      -| [{'function',{'bar',3}}] )
'module_info'/0 =
    ( fun () ->
	  call 'erlang':'get_module_info'
	      ('fun-app-spec-mismatch')
      -| [{'function',{'module_info',0}}] )
'module_info'/1 =
    ( fun (_0) ->
	  call 'erlang':'get_module_info'
	      ('fun-app-spec-mismatch', ( _0
					  -| [{'function',{'module_info',1}}] ))
      -| [{'function',{'module_info',1}}] )
end